--- a/kindaRPGthing.vcxproj
+++ b/kindaRPGthing.vcxproj
@@ -129,6 +129,9 @@
   <ItemGroup>
     <ClCompile Include="GameFile.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="itemActions.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
